--- a/style.css
+++ b/style.css
@@ -41,17 +41,31 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: start;
+    align-items: center;
     gap: 0.5rem;
 
 }
 
-
 .name-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    gap: 0.3rem;
+}
+
+.name {
     cursor: pointer;
+    color: rgb(39, 39, 39);
+    font-size: 1.2rem;
 }
 
 
+.email {
+    cursor: pointer;
+    color: rgb(101, 101, 101);
+    font-size: 0.8rem;
+}
 
 
 .right-side-box{
@@ -59,26 +73,53 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: start;
-    gap: 0.5rem;
+    align-items: center;
+    gap: 0.8rem;
+    position: relative;
 }
 
-.title-box {
+.title-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: end;
+    gap: 0.3rem;
+
+}
+
+.icon-container{
+    height: auto;
+
+}
+
+.fa-solid fa-ellipsis-vertical {
+    align-items: center;
+
+}
+
+.fly-in-menu{
+    background-color: rgb(243, 243, 243);
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    margin-top: 2rem;
+    position: absolute;
+    
     
 }
 
-
-h1 {
-    font-size: 2rem;
+.details {
+    cursor: pointer;
 }
 
-
-
-
+.profile {
+    ursor: pointer;
+}
 
 .profile-img {
-    width: 60px;
-    height: 60px;
+    width: 48px;
+    height: 48px;
 }
 
 .profile-pic {
